--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ IN THIS CHALLENGE, YOU WILL LEARN ABOUT:
 -->
 
 
-    <title>Firstname Lastname's Instruction Tips</title>
+    <title>Adam Mashour's Tips for using ISO on a Digital Camera</title>
   <script src="https://thimble.mozilla.org/resources/remix/index.js" type="text/javascript"></script>
 </head>
   <body>
@@ -57,7 +57,7 @@ Replace the header contents:
 
     <header>          
       <img src="https://farm9.staticflickr.com/8697/16174797344_3c22e14ba4_o.png" width="100" align="right" height="100" alt="KH_monogram">            
-      <h1>Firstname Lastname's Name of Site</h1>
+      <h1>Adam Mashour's Tips for using ISO on a Digital Camera</h1>
       <h3>An Instruction Challenge for JOUR108</h3>
 
     </header>
@@ -74,14 +74,14 @@ Add your introduction to your step-by-step-guide, including a title, time requir
         <div class="introduction">
 
           <div class="information">
-            <h1>How to make an awesome ...</h1>
+            <h1>How to adjust your camera's ISO</h1>
 
             <hr>
-            <p><b>Assembly time:</b> 30 minutes<br>
-              <b>Awesome rating:</b> 10% awesome</p>
+            <p><b>Time:</b> 5 minutes<br>
+              <b>Awesome rating:</b> 2% awesome</p>
             <hr>
 
-            <p>Are you wondering how to make a cool rocket that can easily surpass a baking soda-vinegar rocket? It's really fun to make. Why don't you try to make it yourself? Follow the steps and you'll make a great rocket!</p>
+            <p>The ISO setting on a camera is universal. It controls the camera's light input and is pivotal when considering the composition of your shot.</p>
 
           </div>
 
@@ -95,12 +95,7 @@ Add your Things You'll Need.
 -->         
             <ul class="list-of-items">
               <li><h2>Things You'll Need</h2></li>
-              <li>Bottle</li>
-              <li>Cardboard</li>
-              <li>Hand pump (bicycle)</li>
-              <li>Cork (vintage wines)</li>
-              <li>Duct Tape</li>
-              <li>Water</li>
+              <li>Any digital camera</li>
             </ul>
           </aside>
         </div>
@@ -116,8 +111,10 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3>Locate your camera's ISO control.</h3>
+              <p>If you have a DSLR, you can probably adjust the ISO on an LCD screen on top and on the back of the camera. If you're shooting with a compact digital camera, you can use the LCD screen on the back.
+Depending on your camera, you may have a designated ISO control button located on the side or top of the camera. Check your manual to locate the control.
+</p> 
             </div>
           </li>
 
