--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Locate your camera's ISO control.</h3>
+              <h3> Locate your camera's ISO control. </h3>
               <p>If you have a DSLR, you can probably adjust the ISO on an LCD screen on top and on the back of the camera. If you're shooting with a compact digital camera, you can use the LCD screen on the back.
 Depending on your camera, you may have a designated ISO control button located on the side or top of the camera. Check your manual to locate the control.
 </p> 
@@ -121,8 +121,10 @@ Depending on your camera, you may have a designated ISO control button located o
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Tape them all to the bottle at an angle of about 120 degrees between them.</h3>
-              <p>Remember, the bottle must be upside down and the flippers must not be taped at the bottle's base.</p>
+              <h3> Choose your camera's auto ISO setting to start. </h3>
+              <p>If you're unsure where to begin or just want to pay attention to the optimal ISO for your photographs, use your camera's automatic ISO setting. If you have this selected, you won't need to manually adjust the ISO for your images.
+If you'd like some control, check to see if your camera will allow you to set limits on the ISO. For example, you might limit the ISO to 1600.
+</p>
 
               <!--
 This block contains a photo and has a caption.
