--- a/index.html
+++ b/index.html
@@ -111,19 +111,17 @@ Add your steps. When you need a new step, copy and paste all of the code of an e
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3> Locate your camera's ISO control. </h3>
-              <p>If you have a DSLR, you can probably adjust the ISO on an LCD screen on top and on the back of the camera. If you're shooting with a compact digital camera, you can use the LCD screen on the back.
-Depending on your camera, you may have a designated ISO control button located on the side or top of the camera. Check your manual to locate the control.
-</p> 
+              <h3> Why should you adjust your ISO? </h3>
+              <p>ISO (named after the organization that standardized the measurements: International Organization for Standardization) is the way cameras control light sensitivity. Adjusting ISO manually can be much better than letting the camera do it automatically because it allows you to achieve a desired tone for the shot. If you’re looking for a darker composition with more contrast, you can use a lower ISO, and if you’re looking for a lighter shot or are shooting in a darker room, you can use a higher ISO.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3> Choose your camera's auto ISO setting to start. </h3>
-              <p>If you're unsure where to begin or just want to pay attention to the optimal ISO for your photographs, use your camera's automatic ISO setting. If you have this selected, you won't need to manually adjust the ISO for your images.
-If you'd like some control, check to see if your camera will allow you to set limits on the ISO. For example, you might limit the ISO to 1600.
+              <h3> Locate your camera's ISO control. </h3>
+              <p> If you have a DSLR, you can probably adjust the ISO on an LCD screen on top and on the back of the camera. If you're shooting with a compact digital camera, you can use the LCD screen on the back.
+Depending on your camera, you may have a designated ISO control button located on the side or top of the camera. Check your manual to locate the control.
 </p>
 
               <!--
@@ -139,8 +137,10 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Make a hole through the cork so that the bicycle pump can easily fit into it.</h3>
-              <p>Fix the pump tube to it with plasticine.</p>
+              <h3> Choose your camera's auto ISO setting to start. </h3>
+              <p>If you're unsure where to begin or just want to pay attention to the optimal ISO for your photographs, use your camera's automatic ISO setting. If you have this selected, you won't need to manually adjust the ISO for your images.
+If you'd like some control, check to see if your camera will allow you to set limits on the ISO. For example, you might limit the ISO to 1600.
+</p>
 
 
               <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
@@ -151,16 +151,18 @@ with a paragraph to create a photo with a caption.
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3> Scroll through the ISO menu to choose an ISO setting. </h3>
+              <p>Once you've pressed the ISO button on the back or top of your camera, you should either see a menu pop up on the LCD screen or see a single number appear on your small LCD screen. Use the scrolling wheel or arrow buttons to scroll through the numbers until you reach the ISO setting you want. Then select the number.</p> 
             </div>
           </li>
 
           <!-- A new step -->
           <li>
             <div class="content">
-              <h3>Invert the bottle and cut three flippers of cardboard.</h3>
-              <p>This is necessary to hold the rocket at launch time. Make your best design.</p> 
+              <h3> Play around with the semi-automatic settings. </h3>
+              <p>If you want to control ISO and aperture or shutter speed, put your camera in AV (for aperture) or TV (for shutter) priority. These will also let you choose the ISO you'll be shooting at.
+For even more control, push your camera's Manual or Program button. These will allow you to select the ISO, aperture, and shutter speed.
+</p> 
             </div>
           </li>
 
@@ -180,7 +182,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 -->         
 
     <footer>
-      <p>The original how-to appeared in <a href="http://www.wikihow.com/Hide-Christmas/Birthday-Presents" title="How to Hide Christmas/Birthday Presents: 7 Steps - wikiHow">WikiHow</a>.</p>
+      <p>The original how-to appeared in <a href="https://www.wikihow.com/Use-Your-Digital-Camera%27s-ISO-Setting" title="How to Use Your Digital Camera's ISO Setting">WikiHow</a>.</p>
       <p>Images are by <a href="http://www.flickr.com/photos/puuikibeach/4655440844/" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
     </footer>
 
