--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@ Customise the visual style and appearance of your guide.
         margin:0 0 130px;
         width:100%;
         font-weight:normal;
-        font-family:Arial, sans-serif;         /* CHANGE THE FONT HERE */
+        font-family:"Quicksand", sans-serif;         /* CHANGE THE FONT HERE */
         color:#555;         /* CHANGE THE FONT COLOR HERE */
       }  
 
@@ -250,7 +250,7 @@ Customise the visual style and appearance of your guide.
       /* BASIC STYLES FOR THE PAGE */
       
       a {
-        color:#1593A1;         /* CHANGE THE LINK COLOR HERE */
+        color:#CFBBF3;         /* CHANGE THE LINK COLOR HERE */
         font-weight:bold;
       }
 
