--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@ Customise the visual style and appearance of your guide.
       header, footer {
         padding:5%;
         border:0 10%;
-        background-color:#A1D0EB;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
+        background-color:#CFBBF3;          /* CHANGE THE HEADER AND FOOTER COLOR HERE */
         width:100%;
         margin:0px;        
       }
@@ -250,7 +250,7 @@ Customise the visual style and appearance of your guide.
       /* BASIC STYLES FOR THE PAGE */
       
       a {
-        color:#CFBBF3;         /* CHANGE THE LINK COLOR HERE */
+        color:#1593A1;         /* CHANGE THE LINK COLOR HERE */
         font-weight:bold;
       }
 
@@ -259,7 +259,7 @@ Customise the visual style and appearance of your guide.
         margin:0;
         width:100%;
         font-weight:bold;
-        font-family:Arial, sans-serif;          /* CHANGE THE HEADER FONT HERE */
+        font-family:"Quicksand", sans-serif;          /* CHANGE THE HEADER FONT HERE */
       }
 
       h2, h3, h4 {
@@ -279,7 +279,7 @@ Customise the visual style and appearance of your guide.
       ul {
         font-family:"Courier New", Courier, monospace;
         box-shadow:0px 2px 10px #ddd;
-        background-color: #D3E3E8;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
+        background-color: #A78ACC;          /* CHANGE THE THINGS BACKGROUND COLOR HERE */
         border: 1px solid #555;           /* CHANGE THE THINGS BORDER HERE */
         padding:0;
         margin:2em 0 0;
