--- a/index.html
+++ b/index.html
@@ -129,8 +129,8 @@ This block contains a photo and has a caption.
 We have used a <div> to group and position the flickr photo
 with a paragraph to create a photo with a caption.
 -->
-              <a href="http://www.flickr.com/photos/hucker/132609525/" title="2006-04-22 Yaeum Middle School Rocket Day 19 by Stephen Hucker, on Flickr"><img alt="2006-04-22 Yaeum Middle School Rocket Day 19" height="%" width="%" src="http://farm1.staticflickr.com/52/132609525_8e6452161d.jpg" ></a>
-              <p class="caption">Maecenas sed diam eget risus varius blandit sit amet non magna.</p>
+              <a data-flickr-embed="true" href="https://www.flickr.com/photos/198190917@N02/52865853837/in/dateposted-public/" title="20230502_211859"><img src="https://live.staticflickr.com/65535/52865853837_114a39ca13_o.jpg" width="%" height="%" alt="20230502_211859"/></a>
+              <p class="caption">The ISO settings on a Canon M50 MKii. Located in the bottom right corner.</p>
             </div>
           </li>
 
@@ -143,7 +143,7 @@ If you'd like some control, check to see if your camera will allow you to set li
 </p>
 
 
-              <iframe width="560" height="315" src="https://www.youtube.com/embed/tntOCGkgt98" frameborder="0" allowfullscreen></iframe>
+              <iframe width="560" height="315" src="https://www.youtube.com/embed/Hm8LNy_ZWME" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
             </div>
 
           </li>
