--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@ Change the text and links in the footer of this page to acknowledge the sources 
 
     <footer>
       <p>The original how-to appeared in <a href="https://www.wikihow.com/Use-Your-Digital-Camera%27s-ISO-Setting" title="How to Use Your Digital Camera's ISO Setting">WikiHow</a>.</p>
-      <p>Images are by <a href="http://www.flickr.com/photos/puuikibeach/4655440844/" title="Aquapod™ Water Rocket Launcher in Action by puuikibeach, on Flickr">puuikibeach from Flickr</a></p>
+      <p>Images were taken by me</p>
     </footer>
 
     <!--
